# OpenCV_HW1

./: .gitignore  README.md  main.py  makefile  pyproject.toml
